@@ -35,6 +35,8 @@ Version 1.11.0-svn:
    * Made it possible to disable the credits screen at the end of a campaign
      by specifying end_credits=no in the final [endlevel] action, or in the
      [campaign] definition (defaults to yes)
+   * Added [modify_side] color= attribute, which changes a side's team color
+     range (feature/bug #18772)
    * Removed support for the deprecated [removeitem]
  * Unit changes and balancing:
    * New extra_define ENABLE_WOLF_ADVANCEMENT to optionally enable Wolves
